# DAE_Galaga

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  CodeConventions.md  README.md  RepositoryRequirements.md
.github/workflows/: emscripten.yml
Game/: CMakeLists.txt  Main.cpp
Game/Blueprints/: GravityBenderBlueprints.h
Game/Builders/: GravityBenderBuilder.h  MainMenuBuilder.h  MenuBuilder.h
Game/Commands/: DieCommand.h  MoveCommand.h  PushStateCommand.h  ScoreCommand.h  SpawnGravityFieldCommand.h
Game/Common/: FPSComponent.cpp  FPSComponent.h  MoveCommand.cpp  MoveCommand.h  PushStateCommand.h
Game/Components/: FPSComponent.cpp  FPSComponent.h  GravityReceiverComponent.h  HealthComponent.cpp  HealthComponent.h  RotatorComponent.cpp  RotatorComponent.h  ScoreComponent.cpp  ScoreComponent.h  ScreenWrapComponent.h  SpawnerPortalComponent.cpp  SpawnerPortalComponent.h  UIValueObserver.cpp  UIValueObserver.h
Game/Core/: Main.cpp
Game/Galaga/: GalagaAssembler.h  GalagaMenuAssembler.cpp  GalagaMenuAssembler.h  GalagaMenuState.cpp  GalagaMenuState.h  GalagaState.cpp  GalagaState.h  HealthComponent.cpp  HealthComponent.h  RotatorComponent.cpp  RotatorComponent.h  ScoreComponent.cpp  ScoreComponent.h  UIValueObserver.cpp  UIValueObserver.h
Game/GravityBender/: GravityBenderAssembler.cpp  GravityBenderAssembler.h  GravityBenderBlueprints.h  GravityBenderBuilder.h  GravityBenderState.cpp  GravityBenderState.h  GravityReceiverComponent.cpp  GravityReceiverComponent.h  GravityRegistry.cpp  GravityRegistry.h  PlayerComponent.cpp  PlayerComponent.h  PlayerGravityComponent.h  ScreenWrapComponent.cpp  ScreenWrapComponent.h  SpawnGravityFieldCommand.cpp  SpawnGravityFieldCommand.h  SpawnerPortalComponent.cpp  SpawnerPortalComponent.h
Game/MainMenu/: MainMenuAssembler.cpp  MainMenuAssembler.h  MainMenuBuilder.h  MainMenuState.cpp  MainMenuState.h
Game/Physics/: GravityRegistry.h
Game/States/: GravityBenderState.h  MainMenuState.h
Minigin/: CMakeLists.txt  Font.cpp  Font.h  GameObject.cpp  GameObject.h  Gamepad.cpp  Gamepad.h  InputManager.cpp  InputManager.h  Main.cpp  Minigin.cpp  Minigin.h  Observer.cpp  Observer.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SDBMHash.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Subject.cpp  Subject.h  TextObject.cpp  TextObject.h  Texture2D.cpp  Texture2D.h  ThrashCache.h  Transform.cpp  Transform.h
Minigin/Achievements/: AchievementManager.h  AchievementObserver.h
Minigin/Audio/: ISoundSystem.h  LoggingSoundSystem.cpp  LoggingSoundSystem.h  SDLSoundSystem.cpp  SDLSoundSystem.h
Minigin/Commands/: Command.h  DieCommand.h  MoveCommand.h  ScoreCommand.h
Minigin/Components/: BaseComponent.h  Component.h  FPSComponent.cpp  FPSComponent.h  HealthComponent.cpp  HealthComponent.h  IRenderable.h  ObservableComponent.cpp  ObservableComponent.h  RotatorComponent.cpp  RotatorComponent.h  ScoreComponent.cpp  ScoreComponent.h  TextComponent.cpp  TextComponent.h  TextureComponent.cpp  TextureComponent.h  Transform.cpp  Transform.h  TransformComponent.cpp  TransformComponent.h  UIValueObserver.cpp  UIValueObserver.h
Minigin/Core/: AppStateManager.cpp  AppStateManager.h  ColliderComponent.cpp  ColliderComponent.h  CollisionSystem.cpp  CollisionSystem.h  Component.h  GameObject.cpp  GameObject.h  IAppState.h  IGameState.h  MainMenuState.h  Minigin.cpp  Minigin.h  MoveComponent.cpp  MoveComponent.h  SDBMHash.h  ServiceLocator.cpp  ServiceLocator.h  Transform.cpp  Transform.h
Minigin/Events/: GameEvent.h  IObserver.h  ISubject.h  ObservableComponent.cpp  ObservableComponent.h
Minigin/Graphics/: Font.cpp  Font.h  IRenderable.h  PrimitiveRenderComponent.cpp  PrimitiveRenderComponent.h  Renderer.cpp  Renderer.h  TextComponent.cpp  TextComponent.h  Texture2D.cpp  Texture2D.h  TextureComponent.cpp  TextureComponent.h
Minigin/Input/: Command.h  Gamepad.cpp  Gamepad.h  ICommand.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  PlayerInputComponent.cpp  PlayerInputComponent.h  ScopedInputBinding.cpp  ScopedInputBinding.h
Minigin/ObserverPattern/: GameEvent.h  IObserver.h  ISubject.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h
Minigin/Resources/: ResourceManager.cpp  ResourceManager.h
Minigin/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Minigin/Singletons/: InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  Singleton.h
Minigin/Utilities/: Singleton.h
UML/: Components.puml  Readme.md
cmake/: Dependencies.cmake
web/: index.html
